[package]
name = "emberkeyd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
asym_ratchet = { path = "./asym_ratchet", features = ["serde"] }
bincode = "1.3.3"
color-eyre = "0.6.2"
rand = "0.8.5"
rusqlite = "0.29.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
warp = "0.3.5"
